--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -3136,7 +3136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los métodos de clase se llaman utilizando la sintaxis `Clase.metodo()` o `objeto.metodo()`."
+    "Los métodos de clase se llaman utilizando la sintaxis `Nombre_Clase.metodo()` o `nombre_objeto.metodo()`."
    ]
   },
   {
@@ -3252,34 +3252,37 @@
    "outputs": [],
    "source": [
     "area = Circulo.calcular_area(5)\n",
-    "print(area)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Métodos estáticos (staticmethod)"
+    "print(area)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los  **métodos de estaticos** son métodos que se definen dentro de una clase, pero no reciben automáticamente el parámetro `self` o `cls`. Esto significa que no tienen acceso a los atributos de instancia ni a los atributos de clase. Los métodos estáticos son independientes de las instancias y no pueden modificar el estado de la clase. \n",
-    "Pero por supuesto pueden aceptar parámetros de entrada. Se utilizan generalmente para agrupar funciones relacionadas a la clase, pero que no requieren acceder a los atributos de instancia o de clase."
+    "## Métodos estáticos (`@staticmethod`)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Un *método estático* es una función que está dentro de una clase, pero no necesita acceder ni a la instancia (`self`) ni a la clase (`cls`). Esto significa que no tienen acceso a los atributos de instancia ni a los atributos de clase. Los métodos estáticos son independientes de las instancias y no pueden modificar el estado de la clase.  Pero por supuesto pueden aceptar parámetros de entrada. Es como una función normal, pero que no requiere acceder a los atributos de instancia o de clase.\n",
+    "\n",
     "Se definen utilizando el decorador `@staticmethod` antes de la definición del método. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se utiliza un método estático cuando:\n",
+    "\n",
+    "* Quieres agrupar una función dentro de una clase.\n",
+    "\n",
+    "* No necesitas acceder ni modificar atributos de instancia ni de clase.\n",
+    "\n",
+    "* La función es autónoma y su lógica no depende del estado interno del objeto.\n",
+    "\n"
    ]
   },
   {
@@ -3291,14 +3294,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Clase:\n",
+    "class MiClase:\n",
     "    @staticmethod\n",
-    "    def metodoestatico():\n",
-    "        return \"Método estático\""
+    "    def saludar(nombre):\n",
+    "        print(f\"¡Hola, {nombre}!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Hola, Alice!\n"
+     ]
+    }
+   ],
+   "source": [
+    "MiClase.saludar(\"Alicia\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Hola, Omar!\n"
+     ]
+    }
+   ],
+   "source": [
+    "objeto = MiClase()\n",
+    "objeto.saludar(\"Omar\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supón que estás creando una clase **Conversor**, y quieres funciones para convertir unidades. Estas funciones no dependen del estado de un objeto, así que son candidatas perfectas para métodos estáticos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Conversor:\n",
+    "    @staticmethod\n",
+    "    def km_a_millas(km):\n",
+    "        return km * 0.621371\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def celsius_a_fahrenheit(c):\n",
+    "        return (c * 9/5) + 32\n"
    ]
   },
   {
@@ -3307,7 +3375,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Clase.metodoestatico()"
+    "print(Conversor.km_a_millas(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(Conversor.celsius_a_fahrenheit(30)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -3343,6 +3427,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Jugador:\n",
+    "    def __init__(self, nombre):\n",
+    "        self.nombre = nombre\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def tirar_dado():\n",
+    "        return random.randint(1, 6)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "print(Jugador.tirar_dado())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Observación:** La principal diferencia entre los métodos estáticos y los métodos de clase en Python es cómo acceden a los atributos y comportamientos de la clase."
    ]
   },
@@ -3355,7 +3475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3413,7 +3533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La ***herencia*** es un concepto fundamental de la programación orientada a objetos (POO). La *herencia* **permite que una clase herede los atributos y métodos de otra clase**, lo que permite la reutilización de código y la creación de una jerarquía de clases.\n",
+    "La ***herencia*** es un concepto fundamental de la programación orientada a objetos (POO) y **permite que una clase herede los atributos y métodos de otra clase**, esto promueve la reutilización de código y una estructura jerárquica más clara.\n",
     "\n",
     "La clase que se hereda se conoce como **clase base**, **superclase** o **clase padre**, y la clase que hereda se llama **clase derivada**, **subclase** o **clase hija**. \n",
     "\n",
@@ -3446,6 +3566,20 @@
    "source": [
     "Cuando se crea una instancia de la clase hija, esta hereda los atributos y métodos de la clase padre. Si un atributo o método se encuentra tanto en la clase hija como en la clase padre, se utilizará el de la clase hija."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `super()`: Llamar a la clase padre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3518,6 +3652,34 @@
     "print(otro_carro_ford.propiedadf) \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Persona:\n",
+    "    def __init__(self, nombre):\n",
+    "        self.nombre = nombre\n",
+    "\n",
+    "class Empleado(Persona):\n",
+    "    def __init__(self, nombre, salario):\n",
+    "        super().__init__(nombre)  # llama al constructor de Persona\n",
+    "        self.salario = salario"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
