--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -3533,7 +3533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La ***herencia*** es un concepto fundamental de la programación orientada a objetos (POO) y **permite que una clase herede los atributos y métodos de otra clase**, esto promueve la reutilización de código y una estructura jerárquica más clara.\n",
+    "La ***herencia*** en Python es un concepto fundamental de la programación orientada a objetos (POO) y **permite que una clase herede los atributos y métodos de otra clase**, esto promueve la reutilización de código y una estructura jerárquica más clara.\n",
     "\n",
     "La clase que se hereda se conoce como **clase base**, **superclase** o **clase padre**, y la clase que hereda se llama **clase derivada**, **subclase** o **clase hija**. \n",
     "\n",
@@ -3554,32 +3554,27 @@
    "outputs": [],
    "source": [
     "class ClasePadre:\n",
+    "    # atributos y métodos\n",
     "    pass\n",
     "\n",
     "class ClaseHija(ClasePadre):\n",
-    "    pass"
+    "    # nuevos atributos y métodos o sobreescritura\n",
+    "    pass\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cuando se crea una instancia de la clase hija, esta hereda los atributos y métodos de la clase padre. Si un atributo o método se encuentra tanto en la clase hija como en la clase padre, se utilizará el de la clase hija."
+    "Cuando se crea una instancia de la clase hija, esta hereda los atributos y métodos de la clase padre. **Si un atributo o método se encuentra tanto en la clase hija como en la clase padre, se utilizará el de la clase hija.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `super()`: Llamar a la clase padre"
+    "## Método `super()`: Es utilizado para lamar a la clase padre."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -3674,6 +3669,91 @@
     "    def __init__(self, nombre, salario):\n",
     "        super().__init__(nombre)  # llama al constructor de Persona\n",
     "        self.salario = salario"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Persona:\n",
+    "    def saludar(self):\n",
+    "        print(\"Hola, soy una persona.\")\n",
+    "\n",
+    "class Estudiante(Persona):\n",
+    "    def saludar(self):\n",
+    "        print(\"Hola, soy un estudiante.\")\n",
+    "\n",
+    "persona = Persona()\n",
+    "estudiante = Estudiante()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "persona.saludar()  \n",
+    "estudiante.saludar()  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una aseguradora gestiona distintos tipos de pólizas para sus clientes. Cada tipo de póliza tiene una forma diferente de calcular la prima, dependiendo del riesgo y de la naturaleza del seguro.\n",
+    "\n",
+    "La aseguradora ofrece tres tipos de pólizas:\n",
+    "\n",
+    "1. **Póliza básica**: Tiene una prima fija anual.\n",
+    "2. **Póliza de vida**: La prima depende de la edad del asegurado.\n",
+    "3. **Póliza de automóvil**: La prima depende del valor del vehículo y de los accidentes previos del conductor.\n",
+    "\n",
+    "\n",
+    "4. Crea una clase base abstracta llamada `Poliza`, que incluya los siguientes atributos:\n",
+    "    - `nombre_asegurado`\n",
+    "    - `numero_poliza`\n",
+    "    - `tipo_poliza`\n",
+    "\n",
+    "    Y un método abstracto:\n",
+    "    - `calcular_prima()`\n",
+    "\n",
+    "5. Crea tres subclases que hereden de `Poliza`:\n",
+    "\n",
+    "    #### `PolizaBasica`\n",
+    "    - Tipo: `\"basica\"`\n",
+    "    - La prima es **fija** y siempre es `1000`.\n",
+    "\n",
+    "    #### `PolizaVida`\n",
+    "    - Tipo: `\"vida\"`\n",
+    "    - Atributo adicional: `edad`\n",
+    "    - La prima se calcula como: `500 + (edad * 10)`\n",
+    "\n",
+    "    #### `PolizaAuto`\n",
+    "    - Tipo: `\"auto\"`\n",
+    "    - Atributos adicionales: `valor_auto`, `accidentes_previos`\n",
+    "    - La prima se calcula como: `valor_auto * 0.03 + (accidentes_previos * 100)`\n",
+    "\n",
+    "6. Crea una lista de al menos 4 pólizas (de distintos tipos y con datos variados).\n",
+    "\n",
+    "7. Recorre la lista e imprime un resumen con el nombre del asegurado, el tipo de póliza y la prima anual calculada.\n"
    ]
   },
   {
