--- a/Semanas/Tema3_Modulos.ipynb
+++ b/Semanas/Tema3_Modulos.ipynb
@@ -13,9 +13,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un **módulo** o **librería** en Python es un fichero `.py` que contiene un codigo python que puede ser reutilizado.\n",
+    "Un **módulo** o **librería** en Python es simplemente  un archivo con extensión `.py` que contiene definiciones y declaraciones de Python: funciones, clases, variables, etc. Su propósito es organizar el código de manera lógica y reutilizable.\n",
+    "\n",
+    "<center><i>Cuando importas un módulo, estás diciendo: “quiero usar lo que está definido allí”</i></center>\n",
     "\n",
     "Los módulos suelen contener *funciones* reutilizables, pero también en el se pueden definir *variables* con datos simples o compuestos (*listas*, *diccionarios*, etc), incluso hasta *clases* o cualquier otro código válido en Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -33,6 +42,9 @@
    "outputs": [],
    "source": [
     "#mimodulo.py\n",
+    "\n",
+    "constante = 2.71\n",
+    "\n",
     "def suma(a, b):\n",
     "    return a + b\n",
     "\n",
@@ -67,10 +79,7 @@
     "#print(mimodulo.resta(10, 9)) \n",
     "#print(mimodulo.multiplicacion(2,-1))\n",
     "\n",
-    "print(mimodulo.CONSTANTE)\n",
-    "\n",
-    "print(mimodulo.OTRA_CONSTANTE)\n",
-    "\n"
+    "print(mimodulo.constante)"
    ]
   },
   {
