--- a/Semanas/Tema3_Modulos.ipynb
+++ b/Semanas/Tema3_Modulos.ipynb
@@ -21,13 +21,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ejemplo"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -87,52 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "También podemos importar únicamente los componentes que nos interesen de nuestro modulo como se muestra a continuación:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mimodulo import suma, resta, CONSTANTE\n",
-    "\n",
-    "print(suma(4, 3))   \n",
-    "print(resta(10, 9))  \n",
-    "print(CONSTANTE)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Por último, podemos importar todo el módulo haciendo uso de `*`, sin necesidad de usar `mimodulo.*.`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mimodulo import *\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(suma(2,0))\n",
-    "print(multiplicacion(2,-7))\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Rutas y Uso de sys.path"
+    "## Rutas y Uso de `sys.path`"
    ]
   },
   {
@@ -172,9 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/Users/pablojorge/Desktop/Cursos-UMAR/ProgramacionDOS/Semanas', '/Users/pablojorge/opt/anaconda3/lib/python39.zip', '/Users/pablojorge/opt/anaconda3/lib/python3.9', '/Users/pablojorge/opt/anaconda3/lib/python3.9/lib-dynload', '', '/Users/pablojorge/opt/anaconda3/lib/python3.9/site-packages', '/Users/pablojorge/opt/anaconda3/lib/python3.9/site-packages/aeosa', '/Users/pablojorge/opt/anaconda3/lib/python3.9/site-packages/IPython/extensions', '/Users/pablojorge/.ipython']\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(sys.path)"
@@ -185,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como puedes observar la carpeta de tu proyecta está incluida, pero ¿y si queremos importar un módulo que se encuentre en una ubicación distinta? Pues bien, podemos añadir al `sys.path` la ruta en la que queremos que Python busque."
+    "Como puedes observar la carpeta de tu proyecto está incluida, pero ¿y si queremos importar un módulo que se encuentre en una ubicación distinta? Pues bien, podemos añadir al `sys.path` la ruta en la que queremos que Python busque."
    ]
   },
   {
@@ -243,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### El uso de `as`"
+    "### El uso de `as`"
    ]
   },
   {
@@ -279,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importación parcial de módulos (`from import`)"
+    "### Importación parcial de módulos (`from import`)"
    ]
   },
   {
@@ -290,6 +246,49 @@
     "* `from mi_modulo import f, g, ... `: Ejecuta el código que contiene `mi_modulo` y crea referencias a los objetos `f, g, ...`, de manera que pueden ser invocados por su nombre. De esta manera para invocar cualquiera de estos objetos no hace falta precederlos por el nombre del módulo, basta con escribir su nombre.\n",
     "\n",
     "* `from mi_modulo import *`: Ejecuta el código que contiene `mi_modulo`  y crea referencias a todos los objetos públicos (aquellos que no empiezan por el carácter _) definidos en el módulo, de manera que pueden ser invocados por su nombre."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "También podemos importar únicamente los componentes que nos interesen de nuestro modulo como se muestra a continuación:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mimodulo import suma, resta, CONSTANTE\n",
+    "\n",
+    "print(suma(4, 3))   \n",
+    "print(resta(10, 9))  \n",
+    "print(CONSTANTE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por último, podemos importar todo el módulo haciendo uso de `*`, sin necesidad de usar `mimodulo.*.`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mimodulo import *\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(suma(2,0))\n",
+    "print(multiplicacion(2,-7))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -305,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Módulos de la librería estándar más importantes"
+    "## Módulos estándar más importantes"
    ]
   },
   {
@@ -2864,7 +2863,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
