--- a/Semanas/Tema3_Modulos.ipynb
+++ b/Semanas/Tema3_Modulos.ipynb
@@ -351,6 +351,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para verificar si una librería ya está instalada en Python podemos seguir los siguientes pasos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Abre la terminal dentro de VS Code\n",
+    "  * Ve al menú `Terminal > Nueva terminal` o presiona Ctrl + ` (tecla de tilde invertida).\n",
+    "* En la terminal escribe:\n",
+    "  * `pip list`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O bien sólo ejecuta el siguiente código:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si quieres saber si una librería específica está instalada, escribe en la terminal:\n",
+    "\n",
+    "* `pip show nombre_del_paquete`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip show numpy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -373,6 +431,15 @@
    "metadata": {},
    "source": [
     "`Pyplot` ofrece una interfaz fácil para crear gráficos fácilmente, automatizando la creación de figuras y ejes automáticamente cuando hace un gráfico. Por otra parte, `pylab` combina la funcionalida de `pyplot` para hacer gráficos con funcionalidad de numpy para hacer cálculos con arrays usando un único espacio de nombres muy parecido a Matlab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip show matplotlib"
    ]
   },
   {
@@ -418,76 +485,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot\n",
-    "\n",
-    "# Función cuadrática.\n",
-    "def f1(x):\n",
-    "    return 2*(x**2) + 5*x - 2\n",
-    "\n",
-    "# Función lineal.\n",
-    "def f2(x):\n",
-    "    return 4*x + 1\n",
-    "\n",
-    "# Valores del eje X que toma el gráfico.\n",
-    "x = range(-10, 10)\n",
-    "\n",
-    "# Graficar ambas funciones.\n",
-    "pyplot.plot(x, [f1(i) for i in x])\n",
-    "pyplot.plot(x, [f2(i) for i in x])\n",
-    "\n",
-    "# Establecer el color de los ejes.\n",
-    "pyplot.axhline(0, color=\"black\")\n",
-    "pyplot.axvline(0, color=\"black\")\n",
-    "\n",
-    "# Limitar los valores de los ejes.\n",
-    "pyplot.xlim(-10, 10)\n",
-    "pyplot.ylim(-10, 10)\n",
-    "\n",
-    "# Guardar gráfico como imágen PNG.\n",
-    "pyplot.savefig(\"mi_grafica.jpg\")\n",
-    "pyplot.show()"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Diagrama de línea"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "#Definir los datos\n",
-    "x1 = [3, 4, 5, 6]\n",
-    "y1 = [5, 6, 3, 4]\n",
-    "x2 = [2, 5, 8]\n",
-    "y2 = [3, 4, 3]\n",
-    "\n",
-    "#Configurar las características del gráfico\n",
-    "plt.plot(x1, y1, label = 'Línea 1', linewidth = 1, color = 'blue')\n",
-    "plt.plot(x2, y2, label = 'Línea 2', linewidth = 1, color = 'green')\n",
-    "\n",
-    "#Definir título y nombres de ejes\n",
-    "plt.title('Diagrama de Líneas')\n",
-    "plt.ylabel('Eje Y')\n",
-    "plt.xlabel('Eje X')\n",
-    "\n",
-    "#Mostrar leyenda, cuadrícula y figura\n",
-    "plt.legend()\n",
-    "plt.grid()\n",
-    "plt.show()"
    ]
   },
   {
@@ -544,6 +546,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#Definir los datos\n",
+    "x1 = [3, 4, 5, 6]\n",
+    "y1 = [5, 6, 3, 4]\n",
+    "x2 = [2, 5, 8]\n",
+    "y2 = [3, 4, 3]\n",
+    "\n",
+    "#Configurar las características del gráfico\n",
+    "plt.plot(x1, y1, label = 'Línea 1', linewidth = 1, color = 'blue')\n",
+    "plt.plot(x2, y2, label = 'Línea 2', linewidth = 1, color = 'green')\n",
+    "\n",
+    "#Definir título y nombres de ejes\n",
+    "plt.title('Diagrama de Líneas')\n",
+    "plt.ylabel('Eje Y')\n",
+    "plt.xlabel('Eje X')\n",
+    "\n",
+    "#Mostrar leyenda, cuadrícula y figura\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot\n",
+    "\n",
+    "# Función cuadrática.\n",
+    "def f1(x):\n",
+    "    return 2*(x**2) + 5*x - 2\n",
+    "\n",
+    "# Función lineal.\n",
+    "def f2(x):\n",
+    "    return 4*x + 1\n",
+    "\n",
+    "# Valores del eje X que toma el gráfico.\n",
+    "x = range(-10, 10)\n",
+    "\n",
+    "# Graficar ambas funciones.\n",
+    "pyplot.plot(x, [f1(i) for i in x])\n",
+    "pyplot.plot(x, [f2(i) for i in x])\n",
+    "\n",
+    "# Establecer el color de los ejes.\n",
+    "pyplot.axhline(0, color=\"black\")\n",
+    "pyplot.axvline(0, color=\"black\")\n",
+    "\n",
+    "# Limitar los valores de los ejes.\n",
+    "pyplot.xlim(-10, 10)\n",
+    "pyplot.ylim(-10, 10)\n",
+    "\n",
+    "# Guardar gráfico como imágen PNG.\n",
+    "pyplot.savefig(\"mi_grafica.jpg\")\n",
+    "pyplot.show()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -552,87 +619,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Definir los datos\n",
-    "x1 = ['A','B','C', 'D', 'E']\n",
-    "y1 = [10, 55, 80, 32, 40]\n",
-    "x2 = ['a', 'b', 'c', 'd', 'e']\n",
-    "y2 = [42, 26, 10, 29, 66]\n",
-    "\n",
-    "#Configurar las características del gráfico\n",
-    "plt.bar(x1, y1, label = 'Datos 1', width = 0.75, color = 'lightblue')\n",
-    "plt.bar(x2, y2, label = 'Datos 2', width = 0.75, color = 'orange')\n",
-    "\n",
-    "#Definir título y nombres de ejes\n",
-    "plt.title('Gráfico de barras')\n",
-    "plt.ylabel('Valores')\n",
-    "plt.xlabel('Categorias')\n",
-    "\n",
-    "#Mostrar leyenda y figura\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Definir los datos\n",
-    "x1 = [0.25, 1.25, 2.25, 3.25, 4.25]\n",
-    "y1 = [10, 55, 80, 32, 40]\n",
-    "x2 = [0.75, 1.75, 2.75, 3.75, 4.75]\n",
-    "y2 = [42, 26, 10, 29, 66]\n",
-    "\n",
-    "#Configurar las características del gráfico\n",
-    "plt.bar(x1, y1, label = 'Datos 1', width = 0.25, color = 'lightblue')\n",
-    "plt.bar(x2, y2, label = 'Datos 2', width = 0.75, color = 'orange')\n",
-    "\n",
-    "#Definir título y nombres de ejes\n",
-    "plt.title('Gráfico de barras')\n",
-    "plt.ylabel('Categorias')\n",
-    "plt.xlabel('Valores')\n",
-    "\n",
-    "#Mostrar leyenda y figura\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Datos de ejemplo\n",
-    "categorias = ['A', 'B', 'C', 'D']\n",
-    "valores = [10, 20, 15, 25]\n",
-    "\n",
-    "# Cambiar el color y el ancho de las barras\n",
-    "colores = ['red', 'green', 'blue', 'orange'] #Lista de colores, para asignar un color diferente a cada barra.\n",
-    "anchos = [0.5, 0.8, 0.6, 0.7] #Se establece el ancho de cada barra\n",
-    "\n",
-    "# Crear el gráfico de barras con ajustes\n",
-    "plt.bar(categorias, valores, color=colores, width=anchos)\n",
-    "\n",
-    "# Personalizar el gráfico\n",
-    "plt.xlabel('Categorías')\n",
-    "plt.ylabel('Valores')\n",
-    "plt.title('Gráfica de barras')\n",
-    "\n",
-    "# Mostrar el gráfico\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -681,11 +667,29 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Histogramas"
+    "#Definir los datos\n",
+    "x1 = ['A','B','C', 'D', 'E']\n",
+    "y1 = [10, 55, 80, 32, 40]\n",
+    "x2 = ['a', 'b', 'c', 'd', 'e']\n",
+    "y2 = [42, 26, 10, 29, 66]\n",
+    "\n",
+    "#Configurar las características del gráfico\n",
+    "plt.bar(x1, y1, label = 'Datos 1', width = 0.75, color = 'lightblue')\n",
+    "#plt.bar(x2, y2, label = 'Datos 2', width = 0.75, color = 'orange')\n",
+    "\n",
+    "#Definir título y nombres de ejes\n",
+    "plt.title('Gráfico de barras')\n",
+    "plt.ylabel('Valores')\n",
+    "plt.xlabel('Categorias')\n",
+    "\n",
+    "#Mostrar leyenda y figura\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -695,19 +699,59 @@
    "outputs": [],
    "source": [
     "#Definir los datos\n",
-    "a = [22,55,62,45,21,22,34,42,42,4,2,102,95,85,55,110,120,70,65,55,111,115,80,75,65,54,44,43,42,48]\n",
-    "bins = [0,18,20,30,40,50,60,70,80,90,100]\n",
+    "x1 = [0.25, 1.25, 2.25, 3.25, 4.25]\n",
+    "y1 = [10, 55, 80, 32, 40]\n",
+    "x2 = [0.75, 1.75, 2.75, 3.75, 4.75]\n",
+    "y2 = [42, 26, 10, 29, 66]\n",
     "\n",
     "#Configurar las características del gráfico\n",
-    "plt.hist(a, bins, histtype = 'bar', rwidth = 0.8, color = 'blue')\n",
+    "plt.bar(x1, y1, label = 'Conjunto de datos 1', width = 0.5, color = 'lightblue')\n",
+    "plt.bar(x2, y2, label = 'Conjunto de datos 2', width = 0.5, color = 'orange')\n",
     "\n",
     "#Definir título y nombres de ejes\n",
-    "plt.title('Histograma')\n",
-    "plt.ylabel('Eje Y')\n",
-    "plt.xlabel('Eje X')\n",
+    "plt.title('Gráfico de barras')\n",
+    "plt.ylabel('Categorias')\n",
+    "plt.xlabel('Valores')\n",
     "\n",
-    "#Mostrar figura\n",
+    "#Mostrar leyenda y figura\n",
+    "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Datos de ejemplo\n",
+    "categorias = ['A', 'B', 'C', 'D']\n",
+    "valores = [10, 20, 15, 25]\n",
+    "\n",
+    "# Cambiar el color y el ancho de las barras\n",
+    "colores = ['red', 'green', 'blue', 'orange'] #Lista de colores, para asignar un color diferente a cada barra.\n",
+    "anchos = [0.5, 0.75, 0.25, 1] #Se establece el ancho de cada barra\n",
+    "\n",
+    "# Crear el gráfico de barras con ajustes\n",
+    "plt.bar(categorias, valores, color=colores, width=anchos, edgecolor='blue', linewithd =)\n",
+    "\n",
+    "# Personalizar el gráfico\n",
+    "plt.xlabel('Categorías')\n",
+    "plt.ylabel('Valores')\n",
+    "plt.title('Gráfica de barras')\n",
+    "\n",
+    "# Mostrar el gráfico\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Histogramas"
    ]
   },
   {
@@ -757,6 +801,28 @@
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Definir los datos\n",
+    "a = [22,55,62,45,21,22,34,42,42,4,2,102,95,85,55,110,120,70,65,55,111,115,80,75,65,54,44,43,42,48]\n",
+    "bins = [0,18,20,30,40,50,60,70,80,90,100]\n",
+    "\n",
+    "#Configurar las características del gráfico\n",
+    "plt.hist(a, bins, histtype = 'bar', rwidth = 0.8, color = 'blue')\n",
+    "\n",
+    "#Definir título y nombres de ejes\n",
+    "plt.title('Histograma')\n",
+    "plt.ylabel('Eje Y')\n",
+    "plt.xlabel('Eje X')\n",
+    "\n",
+    "#Mostrar figura\n",
+    "plt.show()"
    ]
   },
   {
