--- a/Semanas/Tema3_Modulos.ipynb
+++ b/Semanas/Tema3_Modulos.ipynb
@@ -611,6 +611,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio\n",
+    "\n",
+    "Una persona invierte una cantidad inicial de **$5,000** en una cuenta que paga un **interés compuesto** del **6% anual**. La inversión se mantiene durante **15 años** y el interés se capitaliza **una vez al año**.\n",
+    "\n",
+    "Utiliza la fórmula del **interés compuesto** para calcular el **capital final** al cabo de cada año. La fórmula es:\n",
+    "\n",
+    "   $$A = P \\left(1 + \\frac{r}{n}\\right)^{nt}$$\n",
+    "\n",
+    "   Donde:\n",
+    "   - $ A $ es el monto final de la inversión después de $ t $ años.\n",
+    "   - $ P $ es el capital inicial (\\$5,000).\n",
+    "   - $ r $ es la tasa de interés anual (6% o 0.06).\n",
+    "   - $ n $ es el número de veces que se capitaliza el interés al año (en este caso 1).\n",
+    "   - $ t $ es el tiempo en años (de 1 a 15)."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
